@@ -11,9 +11,9 @@
   <name>Open Bank Project API</name>
   <inceptionYear>2011</inceptionYear>
   <properties>
-    <scala.version>2.10</scala.version>
-    <scala.compiler>2.10.4</scala.compiler>
-    <lift.version>2.6-M4</lift.version>
+    <scala.version>2.11</scala.version>
+    <scala.compiler>2.11.8</scala.compiler>
+    <lift.version>2.6.3</lift.version>
     <!-- Common plugin settings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -27,12 +27,12 @@
     <repository>
       <id>scala-tools.releases</id>
       <name>Scala-Tools Dependencies Repository for Releases</name>
-      <url>https://oss.sonatype.org/content/groups/scala-tools/</url>
+      <url>https://oss.sonatype.org/content/repositories/releases/</url>
     </repository>
     <repository>
-      <id>java.net.maven2</id>
-      <name>java.net Maven2 Repository</name>
-      <url>http://download.java.net/maven/2/</url>
+      <id>java.net.maven3</id>
+      <name>java.net Maven3 Repository</name>
+      <url>http://download.java.net/maven/3/</url>
     </repository>
     <repository>
       <id>scala-tools.snapshots</id>
@@ -51,6 +51,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_${scala.version}</artifactId>
+      <version>1.0.5</version>
+    </dependency>
+    <dependency>
       <groupId>net.liftweb</groupId>
       <artifactId>lift-mapper_${scala.version}</artifactId>
       <version>${lift.version}</version>
@@ -58,17 +63,17 @@
     <dependency>
       <groupId>net.databinder.dispatch</groupId>
       <artifactId>dispatch-lift-json_${scala.version}</artifactId>
-      <version>0.10.1</version>
+      <version>0.11.3</version>
     </dependency>
     <dependency>
       <groupId>net.databinder.dispatch</groupId>
       <artifactId>dispatch-core_${scala.version}</artifactId>
-      <version>0.10.1</version>
+      <version>0.11.3</version>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.0.9</version>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_${scala.version}</artifactId>
+      <version>0.10.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
@@ -76,44 +81,50 @@
       <version>1.46</version>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>8.4-701.jdbc4</version>
+      <version>9.4-1206-jdbc4</version>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.2.138</version>
+      <version>1.4.191</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.9</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.version}</artifactId>
-      <version>2.0</version>
+      <version>2.2.6</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>7.6.16.v20140903</version>
+      <version>9.2.15.v20160210</version>
       <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-webapp</artifactId>
-        <version>7.6.16.v20140903</version>
+        <version>9.2.15.v20160210</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>net.manub</groupId>
+        <artifactId>scalatest-embedded-kafka_${scala.version}</artifactId>
+        <version>0.7.1</version>
         <scope>test</scope>
     </dependency>
     <dependency>
@@ -129,17 +140,74 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.35.0</version>
+      <version>2.52.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-htmlunit-driver</artifactId>
+      <version>2.52.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sourceforge.htmlunit</groupId>
+      <artifactId>htmlunit</artifactId>
+      <version>2.21</version>
     </dependency>
     <dependency>
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
-      <version>3.2.0</version>
+      <version>3.6.1</version>
     </dependency>
     <dependency>
       <groupId>net.liftmodules</groupId>
       <artifactId>amqp_2.6_${scala.version}</artifactId>
-      <version>1.3</version>
+      <version>1.4-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.pegdown</groupId>
+      <artifactId>pegdown</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jason-goodwin</groupId>
+      <artifactId>authentikat-jwt_${scala.version}</artifactId>
+      <version>0.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.tokbox</groupId>
+      <artifactId>opentok-server-sdk</artifactId>
+      <version>3.0.0-beta.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sksamuel.elastic4s</groupId>
+      <artifactId>elastic4s-core_2.11</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <!-- for LiftConsole -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+      <version>${scala.compiler}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.compiler}</version>
+    </dependency>
+    <dependency>
+      <groupId>oauth.signpost</groupId>
+      <artifactId>signpost-commonshttp4</artifactId>
+      <version>1.2.1.2</version>
     </dependency>
   </dependencies>
 
@@ -150,7 +218,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.9</version>
+        <version>${scala.version}</version>
         <configuration>
           <skipTests>true</skipTests>
         </configuration>
@@ -159,12 +227,13 @@
         <!-- enable the scalatest plugin -->
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
-        <version>1.0-RC1</version>
+        <version>1.0</version>
         <configuration>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <forkMode>once</forkMode>
             <junitxml>.</junitxml>
             <filereports>WDF TestSuite.txt</filereports>
-            <argLine>-Drun.mode=test</argLine>
+            <argLine>-Drun.mode=test -XX:MaxPermSize=128m -Xms512m -Xmx512m</argLine>
         </configuration>
         <executions>
           <execution>
@@ -179,7 +248,7 @@
           <!-- add src/main/java to source dirs -->
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.9.1</version>
+          <version>1.10</version>
           <executions>
             <execution>
               <phase>generate-sources</phase>
@@ -197,19 +266,36 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.2.2</version>
           <configuration>
-            <scalaVersion>${scala.compiler}</scalaVersion>
             <charset>${project.build.sourceEncoding}</charset>
             <jvmArgs>
-              <jvmArg>-Xmx1024m</jvmArg>
               <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
             </jvmArgs>
+            <scalaVersion>${scala.compiler}</scalaVersion>
+            <scalaCompatVersion>${scala.version}</scalaCompatVersion>
+            <recompileMode>incremental</recompileMode>
+            <useZincServer>true</useZincServer>
           </configuration>
           <executions>
             <execution>
               <goals>
                 <goal>compile</goal>
+                <goal>testCompile</goal>
+              </goals>
+              <configuration>
+                <args>
+                  <arg>-dependencyfile</arg>
+                  <arg>${project.build.directory}/.scala_dependencies</arg>
+                  <arg>-Xmax-classfile-name</arg>
+                  <arg>78</arg>
+                </args>
+              </configuration>
+            </execution>
+            <execution>
+              <id>scala-test-compile</id>
+              <phase>process-test-resources</phase>
+              <goals>
                 <goal>testCompile</goal>
               </goals>
             </execution>
@@ -218,12 +304,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.3</version>
+          <version>2.6</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.0.1</version>
           <executions>
             <execution>
               <id>default-copy-resources</id>
@@ -250,16 +336,17 @@
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>maven-jetty-plugin</artifactId>
-          <version>6.1.9</version>
+          <version>6.1.26</version>
           <configuration>
             <contextPath>/</contextPath>
             <scanIntervalSeconds>5</scanIntervalSeconds>
+            <jvmArgs>-Xmx512m -Xms512m</jvmArgs>
           </configuration>
         </plugin>
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
-          <version>1.3.2</version>
+          <version>1.5.1</version>
           <executions>
             <execution>
               <goals>
@@ -275,7 +362,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-idea-plugin</artifactId>
-          <version>2.2</version>
+          <version>2.2.1</version>
           <configuration>
             <downloadSources>true</downloadSources>
           </configuration>
@@ -283,7 +370,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.10</version>
           <configuration>
             <downloadSources>true</downloadSources>
             <additionalProjectnatures>
@@ -301,7 +388,7 @@
         <plugin>
           <groupId>pl.project13.maven</groupId>
           <artifactId>git-commit-id-plugin</artifactId>
-          <version>2.1.0</version>
+          <version>2.2.1</version>
           <executions>
             <execution>
               <goals>
@@ -323,14 +410,16 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.2</version>
         <configuration>
-          <scalaVersion>${scala.compiler}</scalaVersion>
           <charset>${project.build.sourceEncoding}</charset>
           <jvmArgs>
-            <jvmArg>-Xmx1024m</jvmArg>
             <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
           </jvmArgs>
+          <scalaCompatVersion>${scala.version}</scalaCompatVersion>
+          <scalaVersion>${scala.compiler}</scalaVersion>
+          <recompileMode>incremental</recompileMode>
+          <useZincServer>true</useZincServer>
         </configuration>
       </plugin>
     </plugins>
